[workspace]
resolver = "2"
members = [
    "core",
    "level",
    "util",
    "nbt",
    "ecs"
]

[profile.release]
opt-level = 3
debug = true
strip = "none"  # Keep debuginfo for panic backtraces
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false
