[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
bytes = "1.4.0"
cipher = "0.4.3"
dashmap = "5.4.0"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
num-traits = "0.2.15"
parking_lot = "0.12.1"
serde_json = "1.0.94"
snap = "1.1.0"
tokio = { version = "1.26.0", features = ["sync"] }
uuid = "1.3.0"
