[package]
name = "pyro"
version = "0.1.0"
description = "Lightweight, dedicated server software for Minecraft: Bedrock Edition"
edition = "2021"
authors = ["Ruben Adema"]
repository = "https://github.com/teampathfinders/pyro"
license = "Apache-2.0"
rust-version = "1.68.0"

[lib]
name = "pyro"
path = "src/lib.rs"

[dependencies]
nbt = { package = "pyro-nbt", path = "../nbt" }
util = { package = "pyro-util", path = "../util" }
level = { package = "pyro-level", path = "../level" }
proto = { package = "pyro-proto", path = "../protocol" }
replicator = { package = "pyro-repl", path = "../replication" }

paste = "1.0.14"
tokio = { version = "1.32.0", features = ["net", "rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-util = "0.7.8"
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.17", features = ["ansi", "fmt", "json", "smallvec", "parking_lot"], default-features = false }
rand = "0.8.5"
dashmap = "5.4.0"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
flate2 = "1.0.26"
async-recursion = "1.0.2"
serde = { version = "1.0.164", default-features = false }
serde_json = "1.0.104"
anyhow = { version = "1.0.76", features = ["backtrace"] }
legion = "0.4.0"
