[package]
name = "inferno"
version = "0.1.0"
description = "Lightweight, dedicated server software for Minecraft: Bedrock Edition"
edition = "2021"
authors = ["Ruben Adema"]
repository = "https://github.com/teampathfinders/inferno"
license = "Apache-2.0"
rust-version = "1.72.0"

[lib]
name = "inferno"
path = "src/lib.rs"

[features]
tokio-console = ["console-subscriber"]

[dependencies]
nbt = { package = "inferno-nbt", path = "../nbt" }
util = { package = "inferno-util", path = "../util" }
level = { package = "inferno-level", path = "../level" }
proto = { package = "inferno-proto", path = "../protocol" }
replicator = { package = "inferno-repl", path = "../replication" }
raknet = { package = "inferno-raknet", path = "../raknet" }

console-subscriber = { version = "0.2.0", optional = true, features = ["parking_lot"] }

tokio = { version = "1.32.0", features = ["net", "rt-multi-thread", "macros", "time", "tracing", "sync", "signal"] }
tokio-util = "0.7.8"
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.17", features = ["ansi", "fmt", "json", "smallvec", "parking_lot", "env-filter"], default-features = false }
rand = "0.8.5"
dashmap = "5.4.0"
parking_lot = "0.12.1"
flate2 = "1.0.26"
serde = { version = "1.0.196", default-features = false }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
anyhow = { version = "1.0.76", features = ["backtrace"] }
legion = "0.4.0"
nohash-hasher = "0.2.0"

[target.'cfg(unix)'.dependencies]
pyroscope = "0.5.7"
pyroscope_pprofrs = "0.2.7"