[package]
name = "pyro-extensions"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.75"
anyhow = "1.0.76"
flate2 = "1.0.26"
sha2 = "0.10.7"
tracing = "0.1.38"
wasi-common = "7.0.0"
wasmtime = { version = "7.0.0", features = ["cranelift", "parallel-compilation"] }
wasmtime-wasi = "7.0.0"

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.28", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
io-extras = "0.17.4"
rustix = { version = "0.38.0", features = ["net"] }