[package]
name = "pyro-level"
version = "0.1.0"
edition = "2021"
authors = ["Ruben Adema"]
repository = "https://github.com/teampathfinders/pyro"
license = "Apache-2.0"
links = "leveldb-mcpe"
build = "build.rs"
rust-version = "1.66.0"

[dependencies]
util = { package = "pyro-util", path = "../util" }
nbt = { package = "pyro-nbt", path = "../nbt" }
serde = { version = "1.0.166", features = ["derive"] }
tokio-util = "0.7.8"
tracing = "0.1.38"
anyhow = { version = "1.0.71", features = ["backtrace"] }
bytemuck = "1.13.1"

[build-dependencies]
cmake = "0.1.50"
