[package]
name = "inferno-level"
version = "0.1.0"
edition = "2021"
authors = ["Ruben Adema"]
repository = "https://github.com/teampathfinders/inferno"
license = "Apache-2.0"
links = "leveldb-mcpe"
build = "build.rs"
rust-version = "1.66.0"

[dependencies]
util = { package = "inferno-util", path = "../util" }
nbt = { package = "inferno-nbt", path = "../nbt" }
proto = { package = "inferno-proto", path = "../protocol" }

serde = { version = "1.0.194", features = ["derive"] }
anyhow = { version = "1.0.79", features = ["backtrace"] }
bytemuck = "1.14.1"

[build-dependencies]
cmake = "0.1.50"
