[package]
name = "pyro-nbt"
version = "0.1.0"
edition = "2021"
authors = ["Ruben Adema"]
repository = "https://github.com/teampathfinders/pyro"
license = "Apache-2.0"
rust-version = "1.65.0"

[dependencies]
util = { package = "pyro-util", path = "../util" }
serde = { version = "1.0.194", features = ["derive"] }
paste = "1.0.12"
anyhow = "1.0.79"
