[package]
name = "pyro-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { package = "pyro-util", path = "../util" }
nbt = { package = "pyro-nbt", path = "../nbt" }

anyhow = "1.0.79"
bytemuck = "1.14.0"
uuid = { version = "1.4.0", features = ["serde"], default-features = false }
serde_repr = "0.1.18"
serde_json = "1.0.110"
jsonwebtoken = "9.2.0"
aes = "0.8.3"
ctr = "0.9.2"
serde = "1.0.194"
base64 = "0.21.5"
rand = "0.8.5"
sha2 = "0.10.8"
parking_lot = "0.12.1"
p384 = "0.13.0"
dashmap = "5.5.3"
