[package]
name = "pyro-level"
version = "0.1.0"
edition = "2021"
authors = ["Ruben Adema"]
repository = "https://github.com/teampathfinders/pyro"
license = "Apache-2.0"
links = "leveldb-mcpe"
build = "build.rs"
rust-version = "1.66.0"

[dependencies]
util = { package = "pyro-util", path = "../pyro-util" }
nbt = { package = "pyro-nbt", path = "../pyro-nbt" }
serde = { version = "1.0.154", features = ["derive"] }
tokio = { version = "1.26.0", features = ["rt", "time", "macros"] }
tokio-util = "0.7.7"
tracing = "0.1.37"

[build-dependencies]
cmake = "0.1.49"
