[package]
name = "pyro-nbt"
version = "0.1.0"
edition = "2021"
authors = ["Ruben Adema"]
repository = "https://github.com/teampathfinders/pyro"
license = "Apache-2.0"

[dependencies]
util = { package = "pyro-util", path = "../pyro-util" }

bytes = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
