[package]
name = "inferno-raknet"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { package = "inferno-util", path = "../util" }
proto = { package = "inferno-proto", path = "../protocol" }

tracing = "0.1.40"
tokio = { version = "1.36.0", features = ["sync"] }
tokio-util = "0.7.10"
async-recursion = "1.0.5"
anyhow = "1.0.79"
dashmap = "5.5.3"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
prometheus-client = "0.22.1"
