[package]
name = "pyro-repl"
version = "0.1.0"
edition = "2021"

[dependencies]
proto = { package = "pyro-proto", path = "../protocol" }
util = { package = "pyro-util", path = "../util" }

anyhow = "1.0.79"
tokio = { version = "1.35.1", features = ["macros", "rt"] }
tracing = "0.1.40"
fred = "7.1.0"
