[package]
name = "nova"
version = "0.1.0"
edition = "2021"
authors = ["RadiatedMonkey"]
description = "Lightweight, dedicated server software for Minecraft: Bedrock Edition"
repository = "https://github.com/teampathfinders/nova"
license = "Apache-2.0"
build = "build.rs"

[features]
# Requires the tokio_unstable rustc flag
tokio-console = ["console-subscriber"]

[dependencies]
console-subscriber = { version = "0.1.8", optional = true }

bytes = "1.4.0"
tokio = { version = "1.25.0", features = ["net", "rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-util = "0.7.7"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
rand = "0.8.5"
dashmap = "5.4.0"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
flate2 = "1.0.25"
async-recursion = "1.0.2"
jsonwebtoken = "8.2.0"
serde_json = "1.0.92"
serde = "1.0.152"
base64 = "0.21.0"
p384 = { version = "0.12.0", features = ["ecdh", "ecdsa"] }
sha2 = "0.10.6"
ctr = "0.9.2"
aes = "0.8.2"
nbt = { path = "../nbt" }
common = { path = "../common" }
level = { path = "../level" }
serde_repr = "0.1.10"
uuid = { version = "1.3.0", features = ["serde"] }
clap = { version = "4.1.6", features = ["cargo"] }

[build-dependencies]
vergen = "7.5.1"
