[package]
name = "pyro-util"
version = "0.1.0"
edition = "2021"
authors = ["Ruben Adema"]
repository = "https://github.com/teampathfinders/pyro"
license = "Apache-2.0"
rust-version = "1.65.0"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
base64 = "0.21.2"
cipher = "0.4.4"
dashmap = "5.4.0"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
num-traits = "0.2.15"
parking_lot = "0.12.1"
paste = "1.0.12"
serde = "1.0.164"
serde_json = "1.0.97"
snap = "1.1.0"
tokio = { version = "1.28.2", features = ["sync"] }
uuid = "1.3.4"
