[package]
name = "vex-raknet"
version = "0.1.0"
edition = "2021"
authors = ["RadiatedMonkey"]

[dependencies]
vex-common = { path = "../vex-common" }

parking_lot = "0.12.1"
tokio = { version = "1.25.0", features = ["net", "sync", "time", "macros", "rt"] }
dashmap = "5.4.0"
bytes = "1.4.0"
rand = "0.8.5"
tracing = "0.1.37"
async-recursion = "1.0.2"
tokio-util = "0.7.6"
