[package]
name = "vex-server"
version = "0.1.0"
edition = "2021"
authors = ["RadiatedMonkey"]

[features]
# Requires the tokio_unstable rustc flag
tokio-console = ["console-subscriber"]

[dependencies]
vex-nbt = { path = "../vex-nbt" }
vex-common = { path = "../vex-common" }
vex-raknet = { path = "../vex-raknet" }

bytes = "1.4.0"
console-subscriber = { version = "0.1.8", optional = true }
tokio = { version = "1.25.0", features = ["net", "rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-util = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
rand = "0.8.5"
parking_lot = "0.12.1"
flate2 = "1.0.25"
snap = "1.1.0"
jsonwebtoken = "8.2.0"
serde_json = "1.0.92"
serde = "1.0.152"
base64 = "0.21.0"
spki = "0.6.0"
p384 = { version = "0.12.0", features = ["ecdh", "ecdsa"] }
sha2 = "0.10.6"
ecdsa = "0.15.1"
cipher = "0.4.3"
ctr = "0.9.2"
aes = "0.8.2"
thiserror = "1.0.38"
lazy_static = "1.4.0"
