[package]
name = "inferno"
version = "0.1.0"
description = "Lightweight, dedicated server software for Minecraft: Bedrock Edition"
edition = "2021"
authors = ["Ruben Adema"]
repository = "https://github.com/teampathfinders/inferno"
license = "Apache-2.0"
rust-version = "1.75.0"
build = "build.rs"

[lib]
name = "inferno"
path = "src/lib.rs"

[features]
tokio-console = ["console-subscriber"]

[build-dependencies]
vergen = { version = "8.3.1", features = ["git", "gitcl"] }

[dependencies]
nbt = { package = "inferno-nbt", path = "../nbt" }
util = { package = "inferno-util", path = "../util" }
level = { package = "inferno-level", path = "../level" }
proto = { package = "inferno-proto", path = "../proto" }
replicator = { package = "inferno-repl", path = "../repl" }
raknet = { package = "inferno-raknet", path = "../raknet" }
macros = { package = "inferno-macros", path = "../macros" }

console-subscriber = { version = "0.2.0", optional = true, features = ["parking_lot"] }

tracing = { version = "0.1.38", features = ["attributes"] }
tracing-subscriber = { version = "0.3.17", features = ["ansi", "fmt", "json", "smallvec", "parking_lot", "env-filter"], default-features = false }

tokio = { version = "1.32.0", features = ["net", "rt-multi-thread", "macros", "time", "tracing", "sync", "signal"] }
tokio-util = "0.7.8"
rand = "0.8.5"
dashmap = "5.4.0"
parking_lot = "0.12.1"
flate2 = "1.0.26"
serde = { version = "1.0.196", default-features = false }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
anyhow = { version = "1.0.76", features = ["backtrace"] }
legion = "0.4.0"
nohash-hasher = "0.2.0"

# Telemetry

prometheus-client = "0.22.1"
systemstat = "0.2.3"
lazy_static = "1.4.0"
paste = "1.0.14"
rayon = "1.8.1"
futures = "0.3.30"