[package]
name = "mirai"
version = "0.1.0"
description = "Lightweight, dedicated server software for Minecraft: Bedrock Edition"
edition = "2021"
authors = ["Ruben Adema"]
repository = "https://github.com/teampathfinders/mirai"
license = "Apache-2.0"
rust-version = "1.75.0"
build = "build.rs"

[lib]
name = "mirai"
path = "src/lib.rs"

[features]
tokio-console = ["console-subscriber"]

[build-dependencies]
vergen = { version = "8.3.2", features = ["git", "gitcl"] }

[dependencies]
nbt = { package = "mirai-nbt", path = "../nbt" }
util = { package = "mirai-util", path = "../util" }
level = { package = "mirai-level", path = "../level" }
proto = { package = "mirai-proto", path = "../proto" }
raknet = { package = "mirai-raknet", path = "../raknet" }
macros = { package = "mirai-macros", path = "../macros" }

console-subscriber = { version = "0.4.0", optional = true, features = ["parking_lot"] }

tracing = { version = "0.1.38", features = ["attributes"] }
tracing-subscriber = { version = "0.3.17", features = ["ansi", "fmt", "json", "smallvec", "parking_lot", "env-filter"], default-features = false }

tokio = { version = "1.40.0", features = ["net", "rt-multi-thread", "macros", "time", "tracing", "sync", "signal"] }
tokio-util = "0.7.12"
rand = "0.8.5"
dashmap = "6.1.0"
parking_lot = "0.12.3"
flate2 = "1.0.32"
serde = { version = "1.0.216", default-features = false }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
nohash-hasher = "0.2.0"
paste = "1.0.15"
rayon = "1.10.0"
futures = { version = "0.3.30", default-features = false }