[package]
name = "mirai-level"
version = "0.1.0"
edition = "2021"
authors = ["Ruben Adema"]
repository = "https://github.com/teampathfinders/mirai"
license = "Apache-2.0"
links = "leveldb-mcpe"
build = "build.rs"
rust-version = "1.66.0"

[dependencies]
util = { package = "mirai-util", path = "../util" }
nbt = { package = "mirai-nbt", path = "../nbt" }
proto = { package = "mirai-proto", path = "../proto" }

serde = { version = "1.0.228", features = ["derive"] }
anyhow = { version = "1.0.100", features = ["backtrace"] }
bytemuck = "1.18.0"
tracing = "0.1.40"
nohash-hasher = "0.2.0"

[build-dependencies]
cmake = "0.1.51"
