[package]
name = "mirai-nbt"
version = "0.1.0"
edition = "2021"
authors = ["Ruben Adema"]
repository = "https://github.com/teampathfinders/mirai"
license = "Apache-2.0"
rust-version = "1.65.0"

[dependencies]
util = { package = "mirai-util", path = "../util" }

serde = { version = "1.0.216", features = ["derive"] }
paste = "1.0.15"
anyhow = "1.0.95"
