[package]
name = "mirai-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { package = "mirai-util", path = "../util" }
macros = { package = "mirai-macros", path = "../macros" }
nbt = { package = "mirai-nbt", path = "../nbt" }

anyhow = "1.0.95"
bytemuck = "1.18.0"
uuid = { version = "1.10.0", features = ["v4", "serde"], default-features = false }
serde_repr = "0.1.19"
serde_json = "1.0.128"
jsonwebtoken = "9.3.0"
aes = "0.8.4"
ctr = "0.9.2"
serde = "1.0.216"
base64 = "0.22.1"
rand = "0.8.5"
sha2 = "0.10.8"
parking_lot = "0.12.3"
p384 = "0.13.0"
dashmap = "6.1.0"
paste = "1.0.15"
tracing = "0.1.40"

# reqwest = { version = "0.11.24", default-features = false, features = ["default-tls", "json"] }
# open = "5.0.1"
# tokio = { version = "1.36.0", features = ["time"] }
# jsonwebkey = { version = "0.3.5", features = ["pkcs-convert", "generate"] }
# ring = "0.17.8"
# warp = "0.3.6"
# ecdsa = "0.16.9"
# p256 = "0.13.2"
