[package]
name = "mirai-raknet"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { package = "mirai-util", path = "../util" }
proto = { package = "mirai-proto", path = "../proto" }

tracing = "0.1.40"
tokio = { version = "1.40.0", features = ["sync"] }
tokio-util = "0.7.12"
async-recursion = "1.1.1"
anyhow = "1.0.95"
dashmap = "6.1.0"
parking_lot = "0.12.3"
lazy_static = "1.5.0"
prometheus-client = "0.24.0"
