[package]
name = "mirai-util"
version = "0.1.0"
edition = "2021"
authors = ["Ruben Adema"]
repository = "https://github.com/teampathfinders/mirai"
license = "Apache-2.0"
rust-version = "1.75.0"

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
base64 = "0.22.0"
cipher = "0.4.4"
dashmap = "5.4.0"
jsonwebtoken = "9.3.0"
num-traits = "0.2.18"
parking_lot = "0.12.1"
paste = "1.0.12"
serde = "1.0.197"
serde_json = "1.0.115"
snap = "1.1.1"
tokio = { version = "1.36.0", features = ["sync"] }
tracing = "0.1.40"
uuid = "1.8.0"
